add a link to download cv

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View My Work</a>
                         <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                        <a href="MyCV.jpg" class="btn btn-primary" download="MyCV.jpg" target="_blank" rel="noopener">Download CV <i class="fas fa-download"></i></a>
                     </div>
                     <div class="hero-stats">
                         <div class="stat-item">
@@ -550,6 +551,22 @@
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
+
+                    <div class="contact-card cv-card">
+                        <div class="cv-thumb">
+                            <a href="MyCV.jpg" target="_blank" rel="noopener">
+                                <img src="MyCV.jpg" alt="My CV" class="cv-image">
+                            </a>
+                        </div>
+                        <div class="contact-details">
+                            <h3>My CV</h3>
+                            <p>View or download my CV.</p>
+                            <div class="cv-actions">
+                                <a href="MyCV.jpg" target="_blank" class="btn btn-secondary">View CV</a>
+                                <a href="MyCV.jpg" download="MyCV.jpg" class="btn btn-primary">Download CV <i class="fas fa-download"></i></a>
+                            </div>
+                        </div>
+                    </div> 
                 </div>
                 <div class="contact-form">
                     <form>
